--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <link rel="stylesheet" href="src/style.css">
 <canvas></canvas>
+<script src="data/battlezones.js"></script>
+<script src="data/collisions.js"></script>
+<script src="src/classes.js"></script>
 <script src="src/index.js"></script>
