--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="src/style.css">
-<canvas></canvas>
+<div id="root">
+  <div id="overlappingDiv"></div>
+  <canvas></canvas>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js" integrity="sha512-GQ5/eIhs41UXpG6fGo4xQBpwSEj9RrBvMuKyE2h/2vw3a9x85T1Bt0JglOUVJJLeyIUl/S/kCdDXlE/n7zCjIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="data/battlezones.js"></script>
 <script src="data/collisions.js"></script>
 <script src="src/classes.js"></script>
