--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
   <canvas></canvas>
 
   <div id="battleBar">
-    <div>
-      <button>Tackle</button>
-      <button>Fireball</button>
-      <button> - </button>
-      <button> - </button>
+
+    <!-- dialogues-->
+    <div id="dialoguesDiv">
+      asdfghjk
     </div>
-    <div>
-      <h1>Attack type</h1>
+
+    <!-- attacks -->
+    <div id="attacksBox">
+      <!-- <button>Tackle</button>
+      <button>Fireball</button> -->
+      <!-- <button> - </button>
+      <button> - </button> -->
+    </div>
+    <div id="attackType">
+      <h1 id="attackTypeText">Attack type</h1>
     </div>
   </div>
 </div>
@@ -47,5 +54,7 @@
 <script src="data/battlezones.js"></script>
 <script src="data/collisions.js"></script>
 <script src="data/attacks.js"></script>
+<script src="data/monsters.js"></script>
 <script src="src/classes.js"></script>
 <script src="src/index.js"></script>
+<script src="src/battleScene.js"></script>
