Transition back to map

--- a/index.html
+++ b/index.html
@@ -10,40 +10,42 @@
 <div id="root">
   <div id="overlappingDiv"></div>
 
-  <div id="monsterDiv">
-    <h2 class="monsterName">Draggle</h2>
-    <div id="monsterLifeBar">
-      <div class="monsterLifeBar"></div>
-      <div class="monsterGreenBar" id="enemyHealthBar"></div>
-    </div>
-  </div>
-
-  <div id="ownMonsterDiv">
-    <h2 class="monsterName">Emby</h2>
-    <div id="ownMonsterLifeBar">
-      <div class="monsterLifeBar"></div>
-      <div class="monsterGreenBar" id="playerHealthBar"></div>
-    </div>
-  </div>
-
   <canvas></canvas>
 
-  <div id="battleBar">
-
-    <!-- dialogues-->
-    <div id="dialoguesDiv">
-      asdfghjk
+  <div id="userInterface">
+    <div id="monsterDiv">
+      <h2 class="monsterName">Draggle</h2>
+      <div id="monsterLifeBar">
+        <div class="monsterLifeBar"></div>
+        <div class="monsterGreenBar" id="enemyHealthBar"></div>
+      </div>
     </div>
 
-    <!-- attacks -->
-    <div id="attacksBox">
-      <!-- <button>Tackle</button>
+    <div id="ownMonsterDiv">
+      <h2 class="monsterName">Emby</h2>
+      <div id="ownMonsterLifeBar">
+        <div class="monsterLifeBar"></div>
+        <div class="monsterGreenBar" id="playerHealthBar"></div>
+      </div>
+    </div>
+
+    <div id="battleBar">
+
+      <!-- dialogues-->
+      <div id="dialoguesDiv">
+        asdfghjk
+      </div>
+
+      <!-- attacks -->
+      <div id="attacksBox">
+        <!-- <button>Tackle</button>
       <button>Fireball</button> -->
-      <!-- <button> - </button>
+        <!-- <button> - </button>
       <button> - </button> -->
-    </div>
-    <div id="attackType">
-      <h1 id="attackTypeText">Attack type</h1>
+      </div>
+      <div id="attackType">
+        <h1 id="attackTypeText">Attack type</h1>
+      </div>
     </div>
   </div>
 </div>
